--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       of spiritual punishment is performing a more honest individual act. Good and 
       Evil, although subjective by their nature, can be translated into general rules 
       on which the majority can agree; good acts further society whilst evil acts harm 
-      it. There is no direct karma system in the universe but a long chain of cause and 
+      it. There is no direct karma system in the universe but rather a long chain of cause and 
       effect whereby acts with good intentions will normally cause good outcomes. A 
       well intended act that has no noticeable direct effect may be the root of a 
       desirable outcome at the end of a long chain of events or, at very least, a 
