right aligned footer acks

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     h1 { margin: 0 10px; font-size: 40px; text-align: center; }
     h1 span { color: #bbb; }
     h3 { margin: 1.5em 0 0.5em; }
-    h2 {text-align:center; font-size: 20px;}
+    h2 {text-align:right; font-size: 20px;}
     p { margin: 1em 0; }
     ul { padding: 0 0 0 40px; margin: 1em 0; }
     .container { max-width: 750px; _width: 750px; margin: 0 auto; }
@@ -31,7 +31,6 @@
   <div class="container">
 
     <h1>Conscientious Mechanist Manifesto</h1>
-    <h2>Karl Williams &amp Tristram Oaten, 2009</h2>
     <p>
       The universe is a vast machine, even the most massive of celestial events are 
       governed by the interaction of the same set of physical rules that govern the 
@@ -78,7 +77,7 @@
       enlightened, forward-thinking one, we will be ready to step forward and act as 
       paragons of progress driving our culture to greater heights.
     </p>
-
+    <h2>Karl Williams &amp Tristram Oaten, 2009</h2>
   </div>
 </body>
 </html>
