Removed potentially elitist language

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       The beliefs of Conscientious Mechanism, therefore, are built around the core 
       goal of understanding the workings of the universe in order to act in a way that 
       benefits the greater good whilst, in the short-term, providing members of our 
-      group with the support to excel above the crowd. 
+      group with the support that they need in order to excel. 
     </p>
     <p>
       Our goals are, of course, highly ambitious and difficult to achieve in the 
