--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       values that we aim to cultivate. When such a time arises that the prevailing 
       culture of greed, ignorance, intolerance and selfishness makes way for a more 
       enlightened, forward-thinking one, we will be ready to step forward and act as 
-      paragons of progress driving human society to greater heights.
+      paragons of progress, driving human society to greater heights.
     </p>
     <h2>Karl Williams &amp Tristram Oaten, 2009</h2>
   </div>
